# kindly-web-search-mcp-server

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  REQUIREMENTS.md  pyproject.toml  requirements.txt
docs/: ArXiv API Integration and PDF Conversion.md  Building Python MCP Server Best Practices.md  GitHub Issue Data Retrieval API.md  Python MCP Server Integration Guide.md  mcp_in_docker.md  mcp_server_for_github.md  mcp_server_installation.md  possibility_mcp_server_in_python.md  repository_organization.md  stackoverflow_api.md  stackoverflow_api_markdown.txt  wikipedia_api.md
examples/: script_run_mcp_tools.py
src/kindly_web_search_mcp_server/: models.py  server.py
src/kindly_web_search_mcp_server/content/: resolver.py
src/kindly_web_search_mcp_server/scrape/: nodriver_worker.py  universal_html.py
src/kindly_web_search_mcp_server/search/: __init__.py  searxng.py  serper.py  tavily.py
src/mcp_server_web_search_advanced_scraping/: models.py  server.py  settings.py
src/mcp_server_web_search_advanced_scraping/content/: github_issues.py  resolver.py  wikipedia.py
src/mcp_server_web_search_advanced_scraping/scrape/: extract.py  nodriver_worker.py  (+2 more)
tests/: conftest.py  test_arxiv.py  test_content_resolver_universal_fallback.py  test_github_issues.py  test_nodriver_worker_sandbox.py  test_page_content_resolver.py  test_search_router.py  test_serper_live.py  test_serper_unit.py  test_server.py  test_stackexchange_api_client.py  test_stackexchange_markdown.py  test_stackexchange_parsing.py  test_universal_html_loader.py  test_wikipedia.py
(+2 files in other folders)
