[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_server_web_search_advanced_scraping"
version = "0.0.1"
dependencies = [
    "mcp",
    "pydantic",
    "httpx",
    "beautifulsoup4",
    "markdownify",
    "nodriver",
    "PyMuPDF",
    "pymupdf_layout",
    "pymupdf4llm",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
mcp-server = "mcp_server_web_search_advanced_scraping.server:main"
mcp-web-search = "mcp_server_web_search_advanced_scraping.server:main"
