[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kindly-web-search-mcp-server"
version = "0.1.0"
description = "MCP server: Serper web search + robust content retrieval."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "pydantic",
    "httpx",
    "beautifulsoup4",
    "markdownify",
    "nodriver",
    "PyMuPDF",
    "pymupdf_layout",
    "pymupdf4llm",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
mcp-server = "kindly_web_search_mcp_server.server:main"
mcp-web-search = "kindly_web_search_mcp_server.server:main"
kindly-web-search = "kindly_web_search_mcp_server.server:main"
kindly-web-search-mcp-server = "kindly_web_search_mcp_server.cli:main"
